syntax = "proto3";
import "google/api/annotations.proto";
import "Dto/reservation.proto";
option csharp_namespace = "JetSetGo.ReservationManagement.Grpc";
message GetAccommodationRequest {string id = 1;}
message AddressDto {
  string city = 1;
  string country = 2;
  string street = 3;
}
message PhotoDto {
  string photo = 1;
}


message SpecialPriceDto {
  DateRangeDto dateRange = 1;
  double price = 2;
}

message AccommodationDto {
  string id = 1;
  string name = 2;
  AddressDto address = 3;
  repeated string amenities = 4;
  int32 max_guests = 5;
  int32 min_guests = 6;
  repeated PhotoDto photos = 7;
  repeated SpecialPriceDto specialPrices = 8;
  string hostId = 9;
  bool automaticConfirmation = 10;
}
message GetAccommodationResponse {AccommodationDto accommodation = 1;}
service GetAccommodationApp{
  rpc GetAccommodation(GetAccommodationRequest) returns (GetAccommodationResponse){
    option (google.api.http) = {
      get: "/api/v1/accommodation/{id}"
    };
  }
}